[tool.poetry]
name = "riseworks-batcher"
version = "0.1.0"
description = "Set of scripts to upload batch of payment of transactions to Riseworks."
authors = ["madlabman <10616301+madlabman@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "riseworks_batcher"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
web3 = "^5.31.3"
rich = "^13.3.2"

[tool.poetry.group.dev.dependencies]
pudb = "^2022.1.3"
mypy = "^1.1.1"
types-requests = "^2.28.11.15"
isort = "^5.12.0"
pylint = "^2.17.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.format]
disable = ["fixme", "duplicate-code"]
max-line-length = 100
good-names = "ex,p,w3"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.py$'
exclude = '''
(
      \.git
    | \.venv
    | /__pycache__/
)
'''
